# markindex-mcp

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md  claude-desktop.md  error-codes.md  release-checklist.md  tool-reference.md
examples/: claude_desktop_config.json  example_workflow.md  sample_policy.md
markindex/: __init__.py  __main__.py  config.py  exceptions.py  logger.py  models.py  server.py
markindex/core/: __init__.py  parser.py  search.py  storage.py  summarizer.py
markindex/tools/: __init__.py  ingest.py  manage.py  navigate.py  query.py
tests/: test_core.py  test_e2e.py  test_integration.py  test_security.py  test_server.py  test_tools.py
